[package]
name = "ree-nft-meta"
version = "0.1.2"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
num-derive = "~0.3"
num-traits = "~0.2"
solana-program = "=1.10.3"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "~0.9.2"
percentage ="~0.1.0"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.10.3"
solana-sdk = "=1.10.3"
solana-validator = "=1.10.3"
solana-logger = "=1.10.3"

[lib]
crate-type = ["cdylib", "lib"]
