[package]
name = "ree-meta"
version = "1.0.9"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
num-derive = "~0.3"
num-traits = "~0.2"
solana-program = "=1.14.6"
thiserror = "1.0.24"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "~0.9.2"
percentage ="~0.1.0"

[features]
no-entrypoint = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-sdk = "=1.14.6"

[lib]
crate-type = ["cdylib", "lib"]
